registro casi terminado

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,6 @@ browser.id=Chrome
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=D:\\xampp\\htdocs\\MiTrastero
-index.file=index.php
+index.file=public/index.php
 run.as=LOCAL
 url=http://localhost/MiTrastero/
