--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,21 @@
    
     "version": "0.2.0",
     "configurations": [
+    {
+        "name": "Launch currently open script",
+        "type": "php",
+        "request": "launch",
+        "program": "${file}",
+        "cwd": "${fileDirname}",
+        "port": 0,
+        "runtimeArgs": [
+            "-dxdebug.start_with_request=yes"
+        ],
+        "env": {
+            "XDEBUG_MODE": "debug,develop",
+            "XDEBUG_CONFIG": "client_port=${port}"
+        }
+    },
         {
             "name": "Listen for XDebug",
             "type": "php",
