--- a/Proyecto/nbproject/private/private.properties
+++ b/Proyecto/nbproject/private/private.properties
@@ -4,4 +4,4 @@ copy.src.on.open=false
 copy.src.target=D:\\xampp\\htdocs\\MiTrastero
 index.file=public/index.php
 run.as=LOCAL
-url=http://localhost/MiTrastero/
+url=http://localhost/MiTrastero/Proyecto
