del bd extra y clase registro

--- a/Proyecto/.env
+++ b/Proyecto/.env
@@ -1,5 +1,5 @@
-HOST=localhost
-DBNAME=bdtrasteros
-USER=root
-PASSWORD=""
-CHARSET=utf8mb4
+DB_HOST=localhost
+DB_DATABASE=bdtrasteros
+DB_USERNAME=root
+DB_PASSWORD=""
+DB_CHARSET=utf8mb4
