--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -1,5 +1,6 @@
+browser.reload.on.save=true
 include.path=${php.global.include.path}
-php.version=PHP_81
+php.version=PHP_80
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
