actualizacion clases con bd

--- a/Proyecto/nbproject/private/private.properties
+++ b/Proyecto/nbproject/private/private.properties
@@ -1,9 +1,4 @@
-copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\xampp\\htdocs\\PhpProject1
-hostname=localhost/ProyectoTrasteroPru/public/index.php
-port=8000
-remote.connection=no-config
-remote.upload=ON_RUN
+index.file=public/index.php
 run.as=LOCAL
-url=http://localhost/ProyectoTrasteroPru/public/index.php
+url=http://localhost/ProyectoTrastero_1
