--- a/Proyecto/composer.json
+++ b/Proyecto/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
+        "twbs/bootstrap": "5.2.3",
         "eftec/bladeone": "dev-master",
         "vlucas/phpdotenv": "dev-master",
         "phpmailer/phpmailer": "^6.6"
